--- a/fe_env.yml
+++ b/fe_env.yml
@@ -2,29 +2,44 @@ name: fe
 channels:
   - defaults
 dependencies:
-  - certifi=2018.8.24=py36_1
-  - click=7.0=py36_0
-  - flask=1.0.2=py36_1
-  - itsdangerous=0.24=py36_1
-  - jinja2=2.10=py36_0
-  - markupsafe=1.0=py36hfa6e2cd_1
-  - pip=10.0.1=py36_0
-  - python=3.6.6=hea74fb7_0
-  - setuptools=40.4.3=py36_0
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.15.26706=h3a45250_0
-  - werkzeug=0.14.1=py36_0
-  - wheel=0.32.1=py36_0
-  - wincertstore=0.2=py36h7fe50ca_0
+  - ca-certificates=2018.03.07=0
+  - certifi=2018.8.24=py37_1
+  - click=7.0=py37_0
+  - flask=1.0.2=py37_1
+  - itsdangerous=0.24=py37_1
+  - jinja2=2.10=py37_0
+  - libedit=3.1.20170329=h6b74fdf_2
+  - libffi=3.2.1=hd88cf55_4
+  - libgcc-ng=8.2.0=hdf63c60_1
+  - libstdcxx-ng=8.2.0=hdf63c60_1
+  - markupsafe=1.0=py37h14c3975_1
+  - ncurses=6.1=hf484d3e_0
+  - openssl=1.0.2p=h14c3975_0
+  - pip=10.0.1=py37_0
+  - python=3.7.0=h6e4f718_3
+  - readline=7.0=h7b6447c_5
+  - setuptools=40.4.3=py37_0
+  - sqlite=3.25.2=h7b6447c_0
+  - tk=8.6.8=hbc83047_0
+  - werkzeug=0.14.1=py37_0
+  - wheel=0.32.1=py37_0
+  - xz=5.2.4=h14c3975_4
+  - zlib=1.2.11=ha838bed_2
   - pip:
+    - atomicwrites==1.2.1
+    - attrs==18.2.0
     - croniter==0.3.25
     - flask-cache==0.13.1
     - flask-caching==1.4.0
     - flask-cli==0.4.0
     - flask-rq2==18.1
+    - more-itertools==4.3.0
+    - pluggy==0.7.1
+    - py==1.6.0
+    - pytest==3.8.2
     - python-dateutil==2.7.3
     - redis==2.10.6
     - rq==0.12.0
     - rq-scheduler==0.8.3
     - six==1.11.0
-prefix: C:\Users\sunil\Anaconda3\envs\fe
+prefix: /home/sunil/anaconda3/envs/fe
